--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,14 @@
       <id>github.com</id>
       <url>gitsite:git@github.com/helenus-driver/helenus.git</url>
     </site>
+    <snapshotRepository>
+      <id>ossrh</id>
+      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+    </snapshotRepository>
+    <repository>
+      <id>ossrh</id>
+      <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+    </repository>
   </distributionManagement>
   
   <developers>
@@ -109,9 +117,15 @@
 	  </configuration>
 	</plugin>
 	<plugin>
-	  <groupId>org.apache.maven.plugins</groupId>
-	  <artifactId>maven-javadoc-plugin</artifactId>
-	  <version>2.9.1</version>
+	  <groupId>org.sonatype.plugins</groupId>
+	  <artifactId>nexus-staging-maven-plugin</artifactId>
+	  <version>1.6.3</version>
+	  <extensions>true</extensions>
+	  <configuration>
+	    <serverId>ossrh</serverId>
+	    <nexusUrl>https://oss.sonatype.org/</nexusUrl>
+	    <autoReleaseAfterClose>true</autoReleaseAfterClose>
+	  </configuration>
 	</plugin>
 	<!-- This plugin's configuration is used to store Eclipse m2e settings 
 	     only. It has no influence on the Maven build itself. -->
@@ -170,12 +184,26 @@
 
   <profiles>
     <profile>
-      <id>javadoc</id>
+      <id>release</id>
       <build>
 	<plugins>
 	  <plugin>
 	    <groupId>org.apache.maven.plugins</groupId>
+	    <artifactId>maven-source-plugin</artifactId>
+	    <version>2.2.1</version>
+	    <executions>
+	      <execution>
+		<id>attach-sources</id>
+		<goals>
+		  <goal>jar-no-fork</goal>
+		</goals>
+	      </execution>
+	    </executions>
+	  </plugin>
+	  <plugin>
+	    <groupId>org.apache.maven.plugins</groupId>
 	    <artifactId>maven-javadoc-plugin</artifactId>
+	    <version>2.9.1</version>
 	    <executions>
 	      <execution>
 		<id>attach-javadocs</id>
@@ -189,6 +217,21 @@
 	      </bottom>
 	      <detectLinks>true</detectLinks>
 	    </configuration>
+	  </plugin>
+	  <!-- The Maven GPG plugin is used to sign the components -->
+	  <plugin>
+	    <groupId>org.apache.maven.plugins</groupId>
+	    <artifactId>maven-gpg-plugin</artifactId>
+	    <version>1.5</version>
+	    <executions>
+	      <execution>
+		<id>sign-artifacts</id>
+		<phase>verify</phase>
+		<goals>
+		  <goal>sign</goal>
+		</goals>
+	      </execution>
+	    </executions>
 	  </plugin>
 	</plugins>
       </build>
