Revert "updated version to release 1.0.8"
This reverts commit 42e79af1d5836664631486bcb679b413674ae2db.

--- a/examples/pom.xml
+++ b/examples/pom.xml
@@ -29,7 +29,7 @@
   <parent>
     <groupId>com.github.helenusdriver</groupId>
     <artifactId>helenus</artifactId>
-    <version>1.0.8</version>
+    <version>1.0.8-SNAPSHOT</version>
   </parent>
   
   <artifactId>examples</artifactId>
