--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
   <groupId>com.github.helenusdriver</groupId>
   <artifactId>helenus</artifactId>
   <packaging>pom</packaging>
-  <version>1.0.8</version>
+  <version>1.0.8-SNAPSHOT</version>
 
   <name>Helenus</name>
   <description>JPA-like syntax for annotating POJO classes for persistence via Cassandra's Java driver</description>
