--- a/pom.xml
+++ b/pom.xml
@@ -127,6 +127,17 @@
 	    <autoReleaseAfterClose>true</autoReleaseAfterClose>
 	  </configuration>
 	</plugin>
+	<plugin>
+	  <groupId>org.apache.maven.plugins</groupId>
+	  <artifactId>maven-release-plugin</artifactId>
+	  <version>2.5</version>
+	  <configuration>
+	    <autoVersionSubmodules>true</autoVersionSubmodules>
+	    <useReleaseProfile>false</useReleaseProfile>
+	    <releaseProfiles>release</releaseProfiles>
+	    <goals>deploy</goals>
+	  </configuration>
+	</plugin>
 	<!-- This plugin's configuration is used to store Eclipse m2e settings 
 	     only. It has no influence on the Maven build itself. -->
 	<plugin>
