--- a/pom.xml
+++ b/pom.xml
@@ -21,15 +21,13 @@
 <!--                                                                           -->
 <!-- @since 1.0                                                                -->
 <!--                                                                           -->
-<project
-    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
-    xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.github.helenusdriver</groupId>
   <artifactId>helenus</artifactId>
   <packaging>pom</packaging>
-  <version>1.0.8-SNAPSHOT</version>
+  <version>1.0.8</version>
 
   <name>Helenus</name>
   <description>JPA-like syntax for annotating POJO classes for persistence via Cassandra's Java driver</description>
@@ -47,6 +45,7 @@
     <connection>scm:git:git://github.com/helenusdriver/helenus.git</connection>
     <developerConnection>scm:git:git@github.com:helenusdriver/helenus.git</developerConnection>
     <url>http://github.com/helenusdriver/helenus/tree/master/</url>
+    <tag>helenus-1.0.8</tag>
   </scm>
 
   <issueManagement>
@@ -78,7 +77,7 @@
   </developers>
   
   <properties>
-    <helenus-version>1.0.8-SNAPSHOT</helenus-version>
+    <helenus-version>1.0.8</helenus-version>
     
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <java-version>1.8</java-version>
