--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -27,7 +27,7 @@
   <parent>
     <groupId>com.github.helenusdriver</groupId>
     <artifactId>helenus</artifactId>
-    <version>1.0.8</version>
+    <version>1.0.9-SNAPSHOT</version>
   </parent>
   
   <artifactId>impl</artifactId>
