--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
   <groupId>com.github.helenusdriver</groupId>
   <artifactId>helenus</artifactId>
   <packaging>pom</packaging>
-  <version>1.0.8</version>
+  <version>1.0.9-SNAPSHOT</version>
 
   <name>Helenus</name>
   <description>JPA-like syntax for annotating POJO classes for persistence via Cassandra's Java driver</description>
@@ -45,7 +45,7 @@
     <connection>scm:git:git://github.com/helenusdriver/helenus.git</connection>
     <developerConnection>scm:git:git@github.com:helenusdriver/helenus.git</developerConnection>
     <url>http://github.com/helenusdriver/helenus/tree/master/</url>
-    <tag>helenus-1.0.8</tag>
+    <tag>HEAD</tag>
   </scm>
 
   <issueManagement>
@@ -77,7 +77,7 @@
   </developers>
   
   <properties>
-    <helenus-version>1.0.8</helenus-version>
+    <helenus-version>1.0.9-SNAPSHOT</helenus-version>
     
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <java-version>1.8</java-version>
