modified artifacts id to include an helenus prefix to them

--- a/examples/pom.xml
+++ b/examples/pom.xml
@@ -30,7 +30,7 @@
     <version>1.0.9-SNAPSHOT</version>
   </parent>
   
-  <artifactId>examples</artifactId>
+  <artifactId>helenus-examples</artifactId>
   <packaging>jar</packaging>
 
   <name>Helenus Examples</name>
@@ -64,11 +64,11 @@
 
     <dependency>
       <groupId>com.github.helenusdriver</groupId>
-      <artifactId>commons</artifactId>
+      <artifactId>helenus-commons</artifactId>
     </dependency>
     <dependency>
       <groupId>com.github.helenusdriver</groupId>
-      <artifactId>api</artifactId>
+      <artifactId>helenus-api</artifactId>
     </dependency>
     
     <dependency>
