--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -30,7 +30,7 @@
     <version>1.0.9-SNAPSHOT</version>
   </parent>
   
-  <artifactId>impl</artifactId>
+  <artifactId>helenus-impl</artifactId>
   <packaging>jar</packaging>
 
   <name>Helenus Implementation</name>
@@ -84,11 +84,11 @@
 
     <dependency>
       <groupId>com.github.helenusdriver</groupId>
-      <artifactId>commons</artifactId>
+      <artifactId>helenus-commons</artifactId>
     </dependency>
     <dependency>
       <groupId>com.github.helenusdriver</groupId>
-      <artifactId>api</artifactId>
+      <artifactId>helenus-api</artifactId>
     </dependency>
     
     <dependency>
