--- a/api/pom.xml
+++ b/api/pom.xml
@@ -30,7 +30,7 @@
     <version>1.0.9-SNAPSHOT</version>
   </parent>
 
-  <artifactId>api</artifactId>
+  <artifactId>helenus-api</artifactId>
   <packaging>jar</packaging>
   
   <name>Helenus API</name>
@@ -52,7 +52,7 @@
 
     <dependency>
       <groupId>com.github.helenusdriver</groupId>
-      <artifactId>commons</artifactId>
+      <artifactId>helenus-commons</artifactId>
     </dependency>
     
     <dependency>
