--- a/commons/pom.xml
+++ b/commons/pom.xml
@@ -30,7 +30,7 @@
     <version>1.0.9-SNAPSHOT</version>
   </parent>
 
-  <artifactId>commons</artifactId>
+  <artifactId>helenus-commons</artifactId>
   <packaging>jar</packaging>
   
   <name>Helenus Common Utilities</name>
