--- a/commons/pom.xml
+++ b/commons/pom.xml
@@ -27,7 +27,7 @@
   <parent>
     <groupId>com.github.helenusdriver</groupId>
     <artifactId>helenus</artifactId>
-    <version>1.0.9</version>
+    <version>1.0.10-SNAPSHOT</version>
   </parent>
 
   <artifactId>helenus-commons</artifactId>
