--- a/pom.xml
+++ b/pom.xml
@@ -81,21 +81,21 @@
     
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <java-version>1.8</java-version>
-    <log4j2-version>2.1</log4j2-version>
+    <log4j2-version>2.2</log4j2-version>
     <log4j-version>1.2.17</log4j-version>
     <commons-lang3-version>3.3.2</commons-lang3-version>
     <commons-collections-version>4.0</commons-collections-version>
     <commons-cli-version>1.2</commons-cli-version>
-    <commons-codec-version>1.9</commons-codec-version>
-    <reflections-version>0.9.9-RC2</reflections-version>
-    <lombok-version>1.14.4</lombok-version>
-    <cassandra-version>2.1.0-rc5</cassandra-version>
-    <cassandra-driver-version>2.1.0-rc1</cassandra-driver-version>
+    <commons-codec-version>1.10</commons-codec-version>
+    <reflections-version>0.9.9</reflections-version>
+    <lombok-version>1.16.2</lombok-version>
+    <cassandra-version>2.1.3</cassandra-version>
+    <cassandra-driver-version>2.1.4</cassandra-driver-version>
     <glassfish-version>1.0.4</glassfish-version>
     
     <findbugs-version>3.0.0</findbugs-version>
 
-    <junit-version>4.11</junit-version>
+    <junit-version>4.12</junit-version>
     <jmockit-version>1.7</jmockit-version>
     <javassist-version>3.12.1.GA</javassist-version>
     
