--- a/api/pom.xml
+++ b/api/pom.xml
@@ -49,6 +49,10 @@
       <groupId>org.glassfish</groupId>
       <artifactId>javax.json</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+    </dependency>
 
     <dependency>
       <groupId>com.github.helenusdriver</groupId>
