--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,7 @@
     <commons-codec-version>1.10</commons-codec-version>
     <reflections-version>0.9.9</reflections-version>
     <lombok-version>1.16.2</lombok-version>
+    <fasterxml-jackson-version>2.5.1</fasterxml-jackson-version>
     <cassandra-version>2.1.3</cassandra-version>
     <cassandra-driver-version>2.1.4</cassandra-driver-version>
     <glassfish-version>1.0.4</glassfish-version>
@@ -329,6 +330,21 @@
 	<groupId>org.reflections</groupId>
 	<artifactId>reflections</artifactId>
 	<version>${reflections-version}</version>
+      </dependency>
+      <!--dependency>
+        <groupId>com.fasterxml.jackson.core</groupId>
+        <artifactId>jackson-databind</artifactId>
+	<version>${fasterxml-jackson-version}</version>
+      </dependency-->
+      <dependency>
+	<groupId>com.fasterxml.jackson.module</groupId>
+	<artifactId>jackson-module-jsonSchema</artifactId>
+	<version>${fasterxml-jackson-version}</version>
+      </dependency>
+      <dependency>
+	<groupId>com.fasterxml.jackson.datatype</groupId>
+	<artifactId>jackson-datatype-jdk8</artifactId>
+	<version>${fasterxml-jackson-version}</version>
       </dependency>
       <dependency>
 	<groupId>com.datastax.cassandra</groupId>
