--- a/pom.xml
+++ b/pom.xml
@@ -342,14 +342,19 @@
 	<version>${fasterxml-jackson-version}</version>
       </dependency>
       <dependency>
+	<groupId>com.datastax.cassandra</groupId>
+	<artifactId>cassandra-driver-core</artifactId>
+	<version>${cassandra-driver-version}</version>
+      </dependency>
+      <dependency>
 	<groupId>com.fasterxml.jackson.datatype</groupId>
 	<artifactId>jackson-datatype-jdk8</artifactId>
 	<version>${fasterxml-jackson-version}</version>
       </dependency>
       <dependency>
-	<groupId>com.datastax.cassandra</groupId>
-	<artifactId>cassandra-driver-core</artifactId>
-	<version>${cassandra-driver-version}</version>
+	<groupId>com.fasterxml.jackson.datatype</groupId>
+	<artifactId>jackson-datatype-jsr310</artifactId>
+	<version>${fasterxml-jackson-version}</version>
       </dependency>
       <dependency>
 	<groupId>org.glassfish</groupId>
