--- a/pom.xml
+++ b/pom.xml
@@ -90,9 +90,11 @@
     <reflections-version>0.9.9</reflections-version>
     <lombok-version>1.16.2</lombok-version>
     <fasterxml-jackson-version>2.5.1</fasterxml-jackson-version>
-    <cassandra-version>2.1.3</cassandra-version>
+    <cassandra-version>2.1.4</cassandra-version>
     <cassandra-driver-version>2.1.4</cassandra-driver-version>
     <glassfish-version>1.0.4</glassfish-version>
+    <tomcat-version>8.0.21</tomcat-version>
+    <servlet-api-version>3.1.0</servlet-api-version>
     
     <findbugs-version>3.0.0</findbugs-version>
 
@@ -269,6 +271,11 @@
 	<artifactId>helenus-api</artifactId>
 	<version>${helenus-version}</version>
       </dependency>
+      <dependency>
+	<groupId>com.github.helenusdriver</groupId>
+	<artifactId>helenus-impl</artifactId>
+	<version>${helenus-version}</version>
+      </dependency>
 
       <!-- Product libraries -->
       <dependency>
@@ -361,6 +368,18 @@
 	<artifactId>javax.json</artifactId>
 	<version>${glassfish-version}</version>
       </dependency>
+      <dependency>
+	<groupId>org.apache.tomcat</groupId>
+	<artifactId>tomcat-catalina</artifactId>
+	<version>${tomcat-version}</version>
+	<scope>provided</scope>
+      </dependency>
+      <dependency>
+	<groupId>javax.servlet</groupId>
+	<artifactId>javax.servlet-api</artifactId>
+	<version>${servlet-api-version}</version>
+	<scope>provided</scope>
+      </dependency>
       
       <!-- Static analysis -->
       <dependency>
@@ -400,6 +419,7 @@
     <module>commons</module>
     <module>api</module>
     <module>impl</module>
+    <module>tomcat</module>
     <module>examples</module>
   </modules>
 </project>
