--- a/pom.xml
+++ b/pom.xml
@@ -268,6 +268,11 @@
       </dependency>
       <dependency>
 	<groupId>org.helenus</groupId>
+	<artifactId>helenus-commons-test</artifactId>
+	<version>${helenus-version}</version>
+      </dependency>
+      <dependency>
+	<groupId>org.helenus</groupId>
 	<artifactId>helenus-api</artifactId>
 	<version>${helenus-version}</version>
       </dependency>
@@ -437,6 +442,7 @@
     
   <modules>
     <module>commons</module>
+    <module>commons-test</module>
     <module>api</module>
     <module>impl</module>
     <module>tomcat</module>
