--- a/commons-test/pom.xml
+++ b/commons-test/pom.xml
@@ -69,6 +69,10 @@
       <artifactId>junit</artifactId>
       <scope>compile</scope>
     </dependency>  
+    <dependency>
+      <groupId>javassist</groupId>
+      <artifactId>javassist</artifactId>
+    </dependency>      
   </dependencies>
   
   <build>
