--- a/commons-test/pom.xml
+++ b/commons-test/pom.xml
@@ -72,6 +72,7 @@
     <dependency>
       <groupId>javassist</groupId>
       <artifactId>javassist</artifactId>
+      <scope>compile</scope>
     </dependency>      
   </dependencies>
   
