--- a/junit/pom.xml
+++ b/junit/pom.xml
@@ -112,11 +112,19 @@
           <groupId>org.hibernate</groupId>
           <artifactId>hibernate-validator</artifactId>
         </exclusion>
+	<exclusion>
+	  <groupId>io.netty</groupId>
+	  <artifactId>netty-all</artifactId>
+	</exclusion>
       </exclusions>
     </dependency>
     <dependency>
       <groupId>com.datastax.cassandra</groupId>
       <artifactId>cassandra-driver-core</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>io.netty</groupId>
+      <artifactId>netty-all</artifactId>
     </dependency>
     <dependency>
       <groupId>org.helenus</groupId>
