--- a/pom.xml
+++ b/pom.xml
@@ -95,6 +95,7 @@
     <glassfish-version>1.0.4</glassfish-version>
     <tomcat-version>8.0.24</tomcat-version>
     <servlet-api-version>3.1.0</servlet-api-version>
+    <netty-version>4.0.27.Final</netty-version>
     
     <findbugs-version>3.0.0</findbugs-version>
 
@@ -393,6 +394,11 @@
 	<groupId>org.glassfish</groupId>
 	<artifactId>javax.json</artifactId>
 	<version>${glassfish-version}</version>
+      </dependency>
+      <dependency>
+	<groupId>io.netty</groupId>
+	<artifactId>netty-all</artifactId>
+	<version>${netty-version}</version>
       </dependency>
       <dependency>
 	<groupId>org.apache.tomcat</groupId>
