--- a/commons-test/pom.xml
+++ b/commons-test/pom.xml
@@ -74,6 +74,11 @@
       <artifactId>javassist</artifactId>
       <scope>compile</scope>
     </dependency>      
+    <dependency>
+      <groupId>com.googlecode.jmockit</groupId>
+      <artifactId>jmockit</artifactId>
+      <scope>compile</scope>
+    </dependency>
   </dependencies>
   
   <build>
