corrected jmockit dependency to org.jmockit and moved to version 1.19

--- a/commons-test/pom.xml
+++ b/commons-test/pom.xml
@@ -75,7 +75,7 @@
       <scope>compile</scope>
     </dependency>      
     <dependency>
-      <groupId>com.googlecode.jmockit</groupId>
+      <groupId>org.jmockit</groupId>
       <artifactId>jmockit</artifactId>
       <scope>compile</scope>
     </dependency>
