--- a/pom.xml
+++ b/pom.xml
@@ -101,7 +101,7 @@
 
     <junit-version>4.12</junit-version>
     <hamcrest-version>1.3</hamcrest-version>
-    <jmockit-version>1.7</jmockit-version>
+    <jmockit-version>1.19</jmockit-version>
     <javassist-version>3.12.1.GA</javassist-version>
     
     <exec-maven-plugin-version>1.3.2</exec-maven-plugin-version>
@@ -439,7 +439,7 @@
 	<scope>test</scope>
       </dependency>
       <dependency>
-	<groupId>com.googlecode.jmockit</groupId>
+	<groupId>org.jmockit</groupId>
 	<artifactId>jmockit</artifactId>
 	<version>${jmockit-version}</version>
 	<scope>test</scope>
