--- a/commons/pom.xml
+++ b/commons/pom.xml
@@ -53,6 +53,10 @@
       <groupId>org.apache.logging.log4j</groupId>
       <artifactId>log4j-api</artifactId>
     </dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.module</groupId>
+      <artifactId>jackson-module-jsonSchema</artifactId>
+    </dependency>
     
     <dependency>
       <groupId>junit</groupId>
