updated pom to remove old 2.6.0 jackson dependency brought in by jackson schema jar.

--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -82,6 +82,10 @@
       <artifactId>jackson-module-jsonSchema</artifactId>
     </dependency>
     <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-annotations</artifactId>
+    </dependency>
+    <dependency>
       <groupId>com.datastax.cassandra</groupId>
       <artifactId>cassandra-driver-core</artifactId>
     </dependency>
