--- a/pom.xml
+++ b/pom.xml
@@ -366,9 +366,20 @@
 	<version>${fasterxml-jackson-version}</version>
       </dependency-->
       <dependency>
+        <groupId>com.fasterxml.jackson.core</groupId>
+        <artifactId>jackson-annotations</artifactId>
+        <version>${fasterxml-jackson-version}</version>
+      </dependency>
+      <dependency>
 	<groupId>com.fasterxml.jackson.module</groupId>
 	<artifactId>jackson-module-jsonSchema</artifactId>
 	<version>${fasterxml-jackson-version}</version>
+        <exclusions>
+          <exclusion> <!-- since this pulls in an old 2.6.0 version -->
+	    <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
+          </exclusion>
+        </exclusions>
       </dependency>
       <dependency>
 	<groupId>com.datastax.cassandra</groupId>
