--- a/pom.xml
+++ b/pom.xml
@@ -80,31 +80,48 @@
     <helenus-version>1.0.10-SNAPSHOT</helenus-version>
     
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    
     <java-version>1.8</java-version>
-    <log4j2-version>2.2</log4j2-version>
+    
+    <log4j2-version>2.5</log4j2-version>
     <log4j-version>1.2.17</log4j-version>
     <commons-lang3-version>3.4</commons-lang3-version>
-    <commons-collections4-version>4.0</commons-collections4-version>
-    <commons-cli-version>1.2</commons-cli-version>
-    <commons-codec-version>1.10</commons-codec-version>
+    <commons-collections4-version>4.1</commons-collections4-version>
     <commons-io-version>2.4</commons-io-version>
+    <commons-cli-version>1.3.1</commons-cli-version>
+    <commons-codec-version>1.10</commons-codec-version>
     <reflections-version>0.9.10</reflections-version>
     <lombok-version>1.16.6</lombok-version>
-    <fasterxml-jackson-version>2.6.1</fasterxml-jackson-version>
-    <cassandra-version>2.1.6</cassandra-version>
+    <fasterxml-jackson-version>2.7.0</fasterxml-jackson-version>
     <glassfish-version>1.0.4</glassfish-version>
-    <tomcat-version>8.0.24</tomcat-version>
+    <tomcat-version>8.0.30</tomcat-version>
     <servlet-api-version>3.1.0</servlet-api-version>
     <netty-version>4.0.27.Final</netty-version>
+    <cassandra-version>2.1.9</cassandra-version>
     
-    <findbugs-version>3.0.0</findbugs-version>
+    <findbugs-version>3.0.1</findbugs-version>
 
     <junit-version>4.12</junit-version>
     <hamcrest-version>1.3</hamcrest-version>
-    <jmockit-version>1.19</jmockit-version>
+    <jmockit-version>1.21</jmockit-version>
     <javassist-version>3.12.1.GA</javassist-version>
     
     <exec-maven-plugin-version>1.3.2</exec-maven-plugin-version>
+    <maven-compiler-plugin-version>3.3</maven-compiler-plugin-version>
+    <surefire-plugin-version>2.19.1</surefire-plugin-version>
+    <failsafe-plugin-version>2.19.1</failsafe-plugin-version>
+    <build-helper-plugin-version>1.10</build-helper-plugin-version>
+    <jacoco-plugin-version>0.7.5.201505241946</jacoco-plugin-version>
+
+    <jacoco.execution.data.dir>${project.build.directory}/coverage-reports</jacoco.execution.data.dir>
+    <jacoco.execution.data.file>${jacoco.execution.data.dir}/jacoco.exec</jacoco.execution.data.file>
+    <jacoco.ut.execution.data.file>${jacoco.execution.data.dir}/jacoco-ut.exec</jacoco.ut.execution.data.file>
+    <jacoco.it.execution.data.file>${jacoco.execution.data.dir}/jacoco-it.exec</jacoco.it.execution.data.file>
+
+    <!-- Only unit tests are run by default. -->
+    <skip.integration.tests>true</skip.integration.tests>
+    <skip.unit.tests>false</skip.unit.tests>
+    <skip.any.tests>false</skip.any.tests>
   </properties>
   
   <build>
@@ -113,7 +130,7 @@
 	<plugin>
 	  <groupId>org.apache.maven.plugins</groupId>
 	  <artifactId>maven-compiler-plugin</artifactId>
-	  <version>3.3</version>
+	  <version>${maven-compiler-plugin-version}</version>
 	  <configuration>
 	    <source>${java-version}</source>
 	    <target>${java-version}</target>
@@ -186,18 +203,228 @@
 	<plugin>
 	  <groupId>org.codehaus.mojo</groupId>
 	  <artifactId>build-helper-maven-plugin</artifactId>
-	  <version>1.1</version>
+          <version>${build-helper-plugin-version}</version>
+	  <executions>
+	    <execution>
+	      <id>add-integration-test-sources</id>
+	      <phase>generate-test-sources</phase>
+	      <goals><goal>add-test-source</goal></goals>
+	      <configuration>
+		<sources>
+		  <source>src/integration-test/java</source>
+		</sources>
+	      </configuration>
+	    </execution>
+	    <execution>
+	      <id>add-integration-test-resources</id>
+	      <phase>generate-test-resources</phase>
+	      <goals><goal>add-test-resource</goal></goals>
+	      <configuration>
+		<resources>
+		  <resource>
+		    <directory>src/integration-test/resources</directory>
+		  </resource>
+		</resources>
+	      </configuration>
+	    </execution>
+	  </executions>
 	</plugin>
 	<plugin>
 	  <groupId>org.codehaus.mojo</groupId>
 	  <artifactId>exec-maven-plugin</artifactId>
 	  <version>${exec-maven-plugin-version}</version>
 	</plugin>
+	<plugin>
+	  <groupId>org.jacoco</groupId>
+	  <artifactId>jacoco-maven-plugin</artifactId>
+	  <version>${jacoco-plugin-version}</version>
+	  <executions>
+            <execution>
+              <id>pre-unit-test</id>
+              <goals><goal>prepare-agent</goal></goals>
+              <configuration>
+                <destFile>${jacoco.ut.execution.data.file}</destFile>
+                <propertyName>jacoco-surefire-argline</propertyName>
+              </configuration>
+            </execution>
+            <execution>
+              <id>post-unit-test</id>
+              <phase>test</phase>
+              <goals><goal>report</goal></goals>
+              <configuration>
+                <dataFile>${jacoco.ut.execution.data.file}</dataFile>
+                <outputDirectory>${project.reporting.outputDirectory}/jacoco-ut</outputDirectory>
+		<skip>${skip.unit.tests}</skip>
+              </configuration>
+            </execution>
+            <execution>
+              <id>check-unit-test</id>
+              <goals><goal>check</goal></goals>
+              <configuration>
+		<dataFile>${jacoco.ut.execution.data.file}</dataFile>
+		<skip>${skip.unit.tests}</skip>
+		<!-- temporarly until we have proper coverage -->
+		<haltOnFailure>false</haltOnFailure>
+		<rules>
+		  <rule>
+		    <element>BUNDLE</element>
+		    <limits>
+		      <limit>
+			<counter>INSTRUCTION</counter>
+			<value>COVEREDRATIO</value>
+			<minimum>0.85</minimum>
+		      </limit>
+		      <limit>
+			<counter>CLASS</counter>
+			<value>MISSEDCOUNT</value>
+			<maximum>0</maximum>
+		      </limit>
+		    </limits>
+		  </rule>
+		</rules>
+              </configuration>
+            </execution>
+	    <execution>
+              <id>pre-integration-test</id>
+              <phase>pre-integration-test</phase>
+              <goals><goal>prepare-agent</goal></goals>
+              <configuration>
+                <destFile>${jacoco.it.execution.data.file}</destFile>
+                <propertyName>jacoco-failsafe-argline</propertyName>
+              </configuration>
+            </execution>
+            <execution>
+              <id>post-integration-test</id>
+              <phase>post-integration-test</phase>
+              <goals><goal>report-integration</goal></goals>
+              <configuration>
+                <dataFile>${jacoco.it.execution.data.file}</dataFile>
+                <outputDirectory>${project.reporting.outputDirectory}/jacoco-it</outputDirectory>
+		<skip>${skip.integration.tests}</skip>
+              </configuration>
+            </execution>
+            <execution>
+              <id>post-test-merge</id>
+              <phase>post-integration-test</phase>
+              <goals><goal>merge</goal></goals>
+              <configuration>
+                <destFile>${jacoco.execution.data.file}</destFile>
+		<fileSets>
+		  <fileSet>
+		    <directory>${jacoco.execution.data.dir}</directory>
+		    <includes>
+		      <include>*-*.exec</include>
+		    </includes>
+		  </fileSet>
+		</fileSets>
+                <dataFile>${jacoco.execution.data.file}</dataFile>
+		<skip>${skip.any.tests}</skip>
+              </configuration>
+            </execution>
+            <execution>
+              <id>post-test-report</id>
+              <phase>post-integration-test</phase>
+              <goals><goal>report</goal></goals>
+              <configuration>
+                <dataFile>${jacoco.execution.data.file}</dataFile>
+                <outputDirectory>${project.reporting.outputDirectory}/jacoco</outputDirectory>
+		<skip>${skip.any.tests}</skip>
+              </configuration>
+            </execution>
+          </executions>
+	</plugin>
+	<plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-surefire-plugin</artifactId>
+          <version>${surefire-plugin-version}</version>
+          <configuration>
+           <argLine>-Dfork="ut-${surefire.forkNumber}" -javaagent:"${settings.localRepository}"/org/jmockit/jmockit/${jmockit-version}/jmockit-${jmockit-version}.jar ${jacoco-surefire-argline}</argLine>
+            <useSystemClassLoader>true</useSystemClassLoader>
+            <runOrder>random</runOrder>
+            <forkCount>1C</forkCount>
+            <reuseForks>true</reuseForks>
+            <testFailureIgnore>true</testFailureIgnore>
+	    <skipTests>${skip.unit.tests}</skipTests>
+	    <excludes>
+              <exclude>**/IT*.java</exclude>
+	      <include>**/*IT.java</include>
+	      <include>**/*ITCase.java</include>
+            </excludes>
+          </configuration>
+        </plugin>
+	<plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-failsafe-plugin</artifactId>
+          <version>${failsafe-plugin-version}</version>
+	  <executions>
+	    <execution>
+              <id>integration-tests</id>
+              <goals>
+		<goal>integration-test</goal>
+		<goal>verify</goal>
+              </goals>
+              <configuration>
+		<argLine>-Dfork="it-${surefire.forkNumber}" -javaagent:"${settings.localRepository}"/org/jmockit/jmockit/${jmockit-version}/jmockit-${jmockit-version}.jar ${jacoco-failsafe-argline}</argLine>
+		<useSystemClassLoader>true</useSystemClassLoader>
+		<runOrder>random</runOrder>
+		<forkCount>1C</forkCount>
+		<reuseForks>true</reuseForks>
+		<testFailureIgnore>true</testFailureIgnore>
+		<skipTests>${skip.integration.tests}</skipTests>
+              </configuration>
+	    </execution>
+	  </executions>
+        </plugin>
       </plugins>
     </pluginManagement>
+
+    <plugins>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>build-helper-maven-plugin</artifactId>
+      </plugin>
+      <plugin>
+	<groupId>org.jacoco</groupId>
+	<artifactId>jacoco-maven-plugin</artifactId>
+      </plugin>
+     </plugins>
   </build>
 
   <profiles>
+    <profile>
+      <id>ut</id>
+      <activation>
+        <property>
+          <name>ut</name>
+        </property>
+      </activation>
+    </profile>
+    <profile>
+      <id>it</id>
+      <activation>
+        <property>
+          <name>it</name>
+        </property>
+      </activation>
+      <properties>
+        <skip.integration.tests>false</skip.integration.tests>
+        <skip.unit.tests>true</skip.unit.tests>
+	<skip.all.tests>false</skip.all.tests>
+      </properties>
+    </profile>
+    <profile>
+      <id>all</id>
+      <activation>
+        <property>
+          <name>all</name>
+        </property>
+      </activation>
+      <properties>
+        <skip.integration.tests>false</skip.integration.tests>
+        <skip.unit.tests>false</skip.unit.tests>
+	<skip.all.tests>false</skip.all.tests>
+      </properties>
+    </profile>
     <profile>
       <id>release</id>
       <build>
