replaced group with parent statement and introduced a new group statement that handles multiple requests in parallel. modified implementation for sequence execution to not rely on query strings to sequence but on actual statements allowing a group to be sequence as a unit. enhanced create/alter schemas to support multiple packages/classes to be specified and enhanced implementation to not re-create tables multiple times. Also enhanced create/alter schemas implementation to separate initial objects from keyspace, table, and index creations such that they could be grouped all together in one group. reduced batch recommended size to 5. modified batch and sequences to cache set of statements separatly from set of query strings. added new hasReachedRecommendedSizeFor() in batch to validate based on the POJO classes and properly implement sizing internally to actually compare based on actual number of statements being batched. updated cassandra.yaml in junit and reverted back timeouts to official values. added ability to set a prefix for tracing on a per statement basis and added error tracing. optimized junit to group together statements for objects insertion and table truncation to speed up processing. some bug fixes.

--- a/pom.xml
+++ b/pom.xml
@@ -97,7 +97,8 @@
     <glassfish-version>1.0.4</glassfish-version>
     <tomcat-version>8.0.30</tomcat-version>
     <servlet-api-version>3.1.0</servlet-api-version>
-    <cassandra-version>2.1.9</cassandra-version>
+    <cassandra-version>2.2.4</cassandra-version>
+    <cassandra-driver-version>2.1.9</cassandra-driver-version>
 
     <netty-version>4.0.27.Final</netty-version>
     
@@ -616,7 +617,7 @@
       <dependency>
 	<groupId>com.datastax.cassandra</groupId>
 	<artifactId>cassandra-driver-core</artifactId>
-	<version>${cassandra-version}</version>
+	<version>${cassandra-driver-version}</version>
       </dependency>
       <dependency>
 	<groupId>org.apache.cassandra</groupId>
