modified create indexes, tables, and types to be groupable. modified create schemas to allow all keyspaces, tables and indexes, and types to be grouped together such that we can speed up creation by ensuring keyspaces are created first, then all types, followed by all tables and indexes and finally initial objects. Also enhanced junit to take advantage of this capability from create schema. fixed multi-threading issues in junit and modified last result sets to use a new pool of threads to process parallel or sequential responses. fixed sequence and batch statements to properly report to the manager the statement sent when their set of statements results in none or 1.

--- a/junit/src/main/resources/cassandra.yaml
+++ b/junit/src/main/resources/cassandra.yaml
@@ -132,9 +132,10 @@ partitioner: org.apache.cassandra.dht.Murmur3Partitioner
 # will spread data evenly across them, subject to the granularity of
 # the configured compaction strategy.
 # If not set, the default directory is $CASSANDRA_HOME/data/data.
-data_file_directories:
+# data_file_directories:
 #     - /var/lib/cassandra/data
 # for JUnit, we want to store that under target
+data_file_directories:
     - target/helenus-junit/data
 
 # commit log.  when running on magnetic HDD, this should be a
@@ -142,7 +143,7 @@ data_file_directories:
 # If not set, the default directory is $CASSANDRA_HOME/data/commitlog.
 # commitlog_directory: /var/lib/cassandra/commitlog
 # for JUnit, we want to store that under target
- commitlog_directory: target/helenus-junit/commitlog
+commitlog_directory: target/helenus-junit/commitlog
 
 # policy for data disk failures:
 # die: shut down gossip and client transports and kill the JVM for any fs errors or
