--- a/commons-test/pom.xml
+++ b/commons-test/pom.xml
@@ -70,7 +70,7 @@
       <scope>compile</scope>
     </dependency>  
     <dependency>
-      <groupId>javassist</groupId>
+      <groupId>org.javassist</groupId>
       <artifactId>javassist</artifactId>
       <scope>compile</scope>
     </dependency>      
