--- a/pom.xml
+++ b/pom.xml
@@ -107,7 +107,7 @@
     <junit-version>4.12</junit-version>
     <hamcrest-version>1.3</hamcrest-version>
     <jmockit-version>1.21</jmockit-version>
-    <javassist-version>3.12.1.GA</javassist-version>
+    <javassist-version>3.20.0-GA</javassist-version>
     
     <exec-maven-plugin-version>1.3.2</exec-maven-plugin-version>
     <maven-compiler-plugin-version>3.3</maven-compiler-plugin-version>
@@ -689,7 +689,7 @@
 	<scope>test</scope>
       </dependency>
       <dependency>
-	<groupId>javassist</groupId>
+	<groupId>org.javassist</groupId>
 	<artifactId>javassist</artifactId>
 	<version>${javassist-version}</version>
 	<scope>test</scope>
