--- a/commons/pom.xml
+++ b/commons/pom.xml
@@ -27,7 +27,7 @@
   <parent>
     <groupId>org.helenus</groupId>
     <artifactId>helenus</artifactId>
-    <version>1.0.13-SNAPSHOT</version>
+    <version>1.0.13</version>
   </parent>
 
   <artifactId>helenus-commons</artifactId>
