--- a/junit/src/main/resources/cassandra.yaml
+++ b/junit/src/main/resources/cassandra.yaml
@@ -51,6 +51,8 @@ hinted_handoff_throttle_in_kb: 1024
 # cross-dc handoff tends to be slower
 max_hints_delivery_threads: 2
 
+hints_directory: target/target/helenus-junit/hints
+
 # Maximum throttle in KBs per second, total. This will be
 # reduced proportionally to the number of nodes in the cluster.
 batchlog_replay_throttle_in_kb: 1024
