--- a/pom.xml
+++ b/pom.xml
@@ -77,28 +77,27 @@
   </developers>
   
   <properties>
-    <helenus-version>1.0.15-SNAPSHOT</helenus-version>
+    <helenus-version>3.0.1-SNAPSHOT</helenus-version>
     
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     
     <java-version>1.8</java-version>
     
-    <log4j2-version>2.5</log4j2-version>
+    <log4j2-version>2.7</log4j2-version>
     <log4j-version>1.2.17</log4j-version>
     <commons-lang3-version>3.4</commons-lang3-version>
     <commons-collections4-version>4.1</commons-collections4-version>
-    <commons-io-version>2.4</commons-io-version>
+    <commons-io-version>2.5</commons-io-version>
     <commons-cli-version>1.3.1</commons-cli-version>
     <commons-codec-version>1.10</commons-codec-version>
     <commons-configuration-version>1.10</commons-configuration-version>
     <reflections-version>0.9.10</reflections-version>
-    <lombok-version>1.16.6</lombok-version>
     <fasterxml-jackson-version>2.6.4</fasterxml-jackson-version>
     <glassfish-version>1.0.4</glassfish-version>
     <tomcat-version>8.0.30</tomcat-version>
     <servlet-api-version>3.1.0</servlet-api-version>
-    <cassandra-version>2.2.4</cassandra-version>
-    <cassandra-driver-version>2.1.9</cassandra-driver-version>
+    <cassandra-version>3.9</cassandra-version>
+    <cassandra-driver-version>3.1.1</cassandra-driver-version>
 
     <netty-version>4.0.27.Final</netty-version>
     
@@ -461,7 +460,7 @@
 	      </execution>
 	    </executions>
 	    <configuration>
-	      <bottom><![CDATA[Copyright (C) 2015-2015 <a href="https://github.com/helenusdriver/helenus">The Helenus Driver Project</a> Authors.]]>
+	      <bottom><![CDATA[Copyright (C) 2015-2016 <a href="https://www.helenus.org">The Helenus Driver Project</a> Authors.]]>
 	      </bottom>
 	      <detectLinks>true</detectLinks>
 	      <tags>
@@ -582,11 +581,6 @@
         <groupId>ch.qos.logback</groupId>
         <artifactId>logback-classic</artifactId>
 	<version>1.1.2</version>
-      </dependency>
-      <dependency>
-	<groupId>org.projectlombok</groupId>
-	<artifactId>lombok</artifactId>
-	<version>${lombok-version}</version>
       </dependency>
       <dependency>
 	<groupId>org.reflections</groupId>
