--- a/examples/pom.xml
+++ b/examples/pom.xml
@@ -27,7 +27,7 @@
   <parent>
     <groupId>org.helenus</groupId>
     <artifactId>helenus</artifactId>
-    <version>1.0.15</version>
+    <version>1.0.16-SNAPSHOT</version>
   </parent>
   
   <artifactId>helenus-examples</artifactId>
