1st working version ... still under test. replaced decoders with Cassandra codecs. added supported for tuples. added support for frozen and non-frozen collections. added support for collections of collections.

--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -86,6 +86,10 @@
       <artifactId>cassandra-driver-core</artifactId>
     </dependency>
     <dependency>
+      <groupId>com.datastax.cassandra</groupId>
+      <artifactId>cassandra-driver-extras</artifactId>
+    </dependency>
+    <dependency>
       <groupId>com.fasterxml.jackson.datatype</groupId>
       <artifactId>jackson-datatype-jdk8</artifactId>
     </dependency>
