--- a/pom.xml
+++ b/pom.xml
@@ -97,7 +97,7 @@
     <tomcat-version>8.0.30</tomcat-version>
     <servlet-api-version>3.1.0</servlet-api-version>
     <cassandra-version>3.9</cassandra-version>
-    <cassandra-driver-version>3.1.1</cassandra-driver-version>
+    <cassandra-driver-version>3.1.3</cassandra-driver-version>
 
     <netty-version>4.0.27.Final</netty-version>
     
@@ -611,6 +611,11 @@
       <dependency>
 	<groupId>com.datastax.cassandra</groupId>
 	<artifactId>cassandra-driver-core</artifactId>
+	<version>${cassandra-driver-version}</version>
+      </dependency>
+      <dependency>
+	<groupId>com.datastax.cassandra</groupId>
+	<artifactId>cassandra-driver-extras</artifactId>
 	<version>${cassandra-driver-version}</version>
       </dependency>
       <dependency>
